# nimbusmart-support-agent

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: agent.py  auth.py  filters.py  main.py  orders_data.py  session.py
backend/app/plugins/: currency_plugin.py  orders_plugin.py  policy_plugin.py
backend/app/rag/: chunking.py  ingest.py  reranker.py  retriever.py  retriever_types.py
backend/app/routes/: auth.py  chat.py
frontend/: .env.example
